overflow resolve

--- a/src/App.scss
+++ b/src/App.scss
@@ -3,6 +3,7 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
+  overflow-x: hidden;
 }
 
 // Header
